[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/ui/shop_screen.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ui/NavButton.tscn" id="2"]
[ext_resource type="FontFile" path="res://assets/fonts/gemunu-libre-v8-latin-700.ttf" id="3"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.254902, 0.254902, 0.254902, 1)

[node name="Layout" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 12.0
offset_right = -18.0
offset_bottom = -12.0

[node name="VBox" type="VBoxContainer" parent="Layout"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="Layout/VBox"]
layout_mode = 2

[node name="BackButton" parent="Layout/VBox/Header" instance=ExtResource("2")]
layout_mode = 2
custom_minimum_size = Vector2(126, 46)
text = "BACK"

[node name="Title" type="Label" parent="Layout/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.964706, 0.964706, 0.964706, 1)
theme_override_colors/font_outline_color = Color(0.74902, 0.184314, 0.686275, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 36
text = "SHOP"
horizontal_alignment = 1

[node name="Currencies" type="VBoxContainer" parent="Layout/VBox/Header"]
layout_mode = 2

[node name="Coins" type="HBoxContainer" parent="Layout/VBox/Header/Currencies"]
layout_mode = 2

[node name="CoinsLabel" type="Label" parent="Layout/VBox/Header/Currencies/Coins"]
layout_mode = 2
theme_override_colors/font_color = Color(0.980392, 0.972549, 0.67451, 1)
theme_override_colors/font_outline_color = Color(0.796078, 0.682353, 0.145098, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 20
text = "Coins:"

[node name="CoinsValue" type="Label" parent="Layout/VBox/Header/Currencies/Coins"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.964706, 0.964706, 1)
theme_override_colors/font_outline_color = Color(0.796078, 0.682353, 0.145098, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 20
text = "0"

[node name="Tokens" type="HBoxContainer" parent="Layout/VBox/Header/Currencies"]
layout_mode = 2

[node name="TokensLabel" type="Label" parent="Layout/VBox/Header/Currencies/Tokens"]
layout_mode = 2
theme_override_colors/font_color = Color(0.87451, 0.486275, 0.827451, 1)
theme_override_colors/font_outline_color = Color(0.74902, 0.184314, 0.686275, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 20
text = "Tokens:"

[node name="TokensValue" type="Label" parent="Layout/VBox/Header/Currencies/Tokens"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.964706, 0.964706, 1)
theme_override_colors/font_outline_color = Color(0.74902, 0.184314, 0.686275, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 20
text = "0"

[node name="Status" type="Label" parent="Layout/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.647059, 0.823529, 0.952941, 1)
theme_override_colors/font_outline_color = Color(0.254902, 0.254902, 0.254902, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 18
text = ""

[node name="Scroll" type="ScrollContainer" parent="Layout/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Margin" type="MarginContainer" parent="Layout/VBox/Scroll"]
layout_mode = 2
offset_left = 8.0
offset_top = 8.0
offset_right = 8.0
offset_bottom = 8.0

[node name="Content" type="VBoxContainer" parent="Layout/VBox/Scroll/Margin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ItemsTitle" type="Label" parent="Layout/VBox/Scroll/Margin/Content"]
layout_mode = 2
theme_override_colors/font_color = Color(0.368627, 0.901961, 0.682353, 1)
theme_override_colors/font_outline_color = Color(0.113725, 0.701961, 0.482353, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 26
text = "Items"

[node name="ItemsList" type="VBoxContainer" parent="Layout/VBox/Scroll/Margin/Content"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="AbilitiesTitle" type="Label" parent="Layout/VBox/Scroll/Margin/Content"]
layout_mode = 2
theme_override_colors/font_color = Color(0.647059, 0.823529, 0.952941, 1)
theme_override_colors/font_outline_color = Color(0.298039, 0.588235, 0.843137, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 26
text = "Abilities"

[node name="AbilitiesList" type="VBoxContainer" parent="Layout/VBox/Scroll/Margin/Content"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="AmuletsTitle" type="Label" parent="Layout/VBox/Scroll/Margin/Content"]
layout_mode = 2
theme_override_colors/font_color = Color(0.87451, 0.486275, 0.827451, 1)
theme_override_colors/font_outline_color = Color(0.74902, 0.184314, 0.686275, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 26
text = "Amulets"

[node name="AmuletsList" type="VBoxContainer" parent="Layout/VBox/Scroll/Margin/Content"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="WeaponsTitle" type="Label" parent="Layout/VBox/Scroll/Margin/Content"]
layout_mode = 2
theme_override_colors/font_color = Color(0.964706, 0.964706, 0.964706, 1)
theme_override_colors/font_outline_color = Color(0.254902, 0.254902, 0.254902, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 26
text = "Weapons"

[node name="WeaponsList" type="VBoxContainer" parent="Layout/VBox/Scroll/Margin/Content"]
layout_mode = 2
theme_override_constants/separation = 8
